--- a/myth-demo/myth-demo-springcloud/myth-demo-springcloud-inventory/pom.xml
+++ b/myth-demo/myth-demo-springcloud/myth-demo-springcloud-inventory/pom.xml
@@ -159,6 +159,10 @@
             <artifactId>spring-test</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.dromara</groupId>
+            <artifactId>myth-springcloud</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
