spring cloud 模拟异常同样会发生错误

--- a/myth-demo/myth-demo-dubbo/myth-demo-dubbo-order/src/main/resources/application.yml
+++ b/myth-demo/myth-demo-dubbo/myth-demo-dubbo-order/src/main/resources/application.yml
@@ -24,5 +24,6 @@ logging:
         org.dromara.myth.lottery: debug
         org.dromara.myth: debug
         io.netty: info
+        org.self4j: info
     path: "./logs"
 
